update routes and views

--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,12 +1,6 @@
-<div id="<%= dom_id task %>">
-  <p>
-    <strong>Title:</strong>
-    <%= task.title %>
-  </p>
-
-  <p>
-    <strong>Done:</strong>
-    <%= task.done %>
-  </p>
-
-</div>
+<p>
+  <%= task.title %>
+  <% if task.done %>
+    <em>(Done)</em>
+  <% end %>
+</p>
