--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,16 +1,10 @@
-<p style="color: green"><%= notice %></p>
-
-<% content_for :title, "Tasks" %>
-
 <h1>Tasks</h1>
 
-<div id="tasks">
-  <% @tasks.each do |task| %>
-    <%= render task %>
-    <p>
-      <%= link_to "Show this task", task %>
-    </p>
-  <% end %>
+<div id="tasks-list">
+  <%= render @tasks %>
 </div>
 
-<%= link_to "New task", new_task_path %>
+<%= form_with(model: Task.new, remote: true, html: { id: "new_task_form" }) do |f| %>
+  <%= f.text_field :title, placeholder: "Task title" %>
+  <%= f.submit "Add Task" %>
+<% end %>
